third_party/WebKit/Source/core/svg/SVGElement.cpp
@@ -88,7 +88,7 @@ void SVGElement::AttachLayoutTree(const AttachContext& context) {
 
 TreeScope& SVGElement::TreeScopeForIdResolution() const {
   const SVGElement* tree_scope_element = this;
-  if (const SVGElement* element = CorrespondingElement())
+  if (const SVGElement* element = CorrespondingUseElement())
     tree_scope_element = element;
   return tree_scope_element->GetTreeScope();
 }
